--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@imbios/next-pwa": "^1.1.1",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "cookies-next": "^4.0.0",
