--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "sass": "^1.69.5",
+    "sonner": "^1.1.0",
     "zustand": "4.4.1"
   },
   "devDependencies": {
